--- a/estilos/style.css
+++ b/estilos/style.css
@@ -14,8 +14,8 @@
 }
 
 body, html {
-    background-color: transparent;
-    height: 10vh;
+    background-color: rgba(211, 211, 211, 0.26);
+    height: 100vh;
     width: 100vw;
 }
 
@@ -36,11 +36,13 @@ section#login {
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
+    transition: width .3s, height .3s;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem {
     display: block;
-    background: #5f2c82 url(../imagem/pexels-david-underland-3523621.jpg) no-repeat;
+    background: transparent url(../imagem/pexels-david-underland-3523621.jpg) no-repeat;
     background-size: cover;
     background-position: center top;
     height: 200px;
