--- a/estilos/style.css
+++ b/estilos/style.css
@@ -32,8 +32,8 @@ section#login {
     transform: translate(-50%, -50%);
     overflow: hidden;
     background-color: transparent;
-    width: 250px;
-    height: 500px;
+    width: 255px;
+    height: 520px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
     transition: width .3s, height .3s;
@@ -59,5 +59,58 @@ div#formulario > h1 {
 }
 
 div#formulario > p {
+    font-size: 0.8em;
+}
+
+form > div.campo {
+    background-color: rgb(235, 235, 235);
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    border: 1px solid gray;
+    margin: 5px 0px;
+}
+
+div.campo > label {
+    display: none;
+}
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: lightgray;
+    color: black;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover {
+    background-color: gray;
+}
+
+form > a.botao {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    padding-top: 7px;
+    margin-top: 5px;
+    background-color: rgb(235, 235, 235);
+    border: 1px solid lightgray;
+    border-radius: 5px;
+    text-decoration: none;
+    color: black;
+}
+
+form > a.botao:hover {
+    background-color: lightgray;
+}
+
+form > a.botao > span {
     font-size: 0.8em;
 }
