--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -8,7 +8,7 @@ Tablet: 768px até 992px
 Desktop: 992px até 1200px
 Grandes telas: acima de 1200px
 */
-
+/* CONFIGURAÇÃO PARA TABLET */
 @media screen and (min-width: 768px) and (max-width: 992px) {
     
     body {
@@ -17,6 +17,7 @@ Grandes telas: acima de 1200px
 
     section#login {
         width: 80vw;
+        height: 300px;
     }
 
     section#login > div#imagem {
@@ -30,7 +31,7 @@ Grandes telas: acima de 1200px
         width: 70%;
     }
 }
-
+/* CONFIGURAÇÕES PARA DESKTOP */
 @media screen and (min-width: 992px) {
     
     body {
@@ -39,6 +40,7 @@ Grandes telas: acima de 1200px
 
     section#login {
         width: 990px;
+        height: 400px;
     }
 
     section#login > div#imagem {
@@ -57,6 +59,7 @@ Grandes telas: acima de 1200px
     }
 
     div#formulario > p {
-        font-size: 1.2em;
+        font-size: 1em;
+        margin: 20px 0px;
     }
 }
