--- a/estilos/style.css
+++ b/estilos/style.css
@@ -29,13 +29,13 @@ section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden;
     background-color: transparent;
     width: 255px;
     height: 520px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
+    transform: translate(-50%, -50%);
     transition: width .3s, height .3s;
     transition-timing-function: ease;
 }
@@ -64,16 +64,38 @@ div#formulario > p {
 
 form > div.campo {
     background-color: rgb(235, 235, 235);
+    border: 2px solid gray;
     display: block;
     width: 100%;
     height: 40px;
-    border-radius: 5px;
-    border: 1px solid gray;
+    border-radius: 8px;
     margin: 5px 0px;
 }
 
 div.campo > label {
     display: none;
+}
+
+div.campo > span {
+   /* background-color: black; */
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input {
+    background-color: lightgray;
+    font-size: 1em;
+    width: calc(100% - 44.8px);
+    height: 100%;
+    border: 0px;
+    border-radius: 8px;
+    pad: 4px;
+    transform: translateY(-12.8px); /* sempre que tiver uma animação e ou transformação para fazer faça como ultima linha do seletor css*/
+}
+
+div.campo > input:focus-within {
+    background-color: white;
 }
 
 form > input[type=submit] {
